# mobsf-cli-python

mobsf_cli_python/: .gitignore  LICENSE  MANIFEST.in  PYTHON_REWRITE.md  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
mobsf_cli_python/cli/: __init__.py  app.py  arguments.py  error.py  main.py
mobsf_cli_python/mobsf_core/: __init__.py  client.py  error.py  response.py
mobsf_cli_python/tests/: __init__.py  test_error.py  test_response.py
